src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dhP0.5-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-window-height { proportion 0.5; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 607 × 336, bounds: 1239 × 688, states: []

post-map configures:
size: 607 × 336, bounds: 1239 × 688, states: [Activated]
